package(default_visibility = ["//visibility:public"])

load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@k8s_service//:defaults.bzl", "k8s_service")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

### AGGREGATOR
k8s_objects(
  name = "all",
  objects = [
    ":ros_master_svc",
    ":ros_publisher_svc",
    ":ros_subscriber_svc",

    ":ros_master_dep",
    ":ros_publisher_dep",
    ":ros_subscriber_dep",
  ],
)

### MASTER
k8s_deploy(
  name = "ros_master_dep",
  template = ":master-deployment.yaml",
)
k8s_service(
  name = "ros_master_svc",
  template = ":master-service.yaml",
)

### PUBLISHER
k8s_deploy(
  name = "ros_publisher_dep",
  template = ":publisher-deployment.yaml",
)
k8s_service(
  name = "ros_publisher_svc",
  template = ":publisher-service.yaml",
)

### SUBSCRIBER
k8s_deploy(
  name = "ros_subscriber_dep",
  template = ":subscriber-deployment.yaml",
)
k8s_service(
  name = "ros_subscriber_svc",
  template = ":subscriber-service.yaml",
)

